--- a/styles.css
+++ b/styles.css
@@ -2323,6 +2323,25 @@
   font-size: 0.9em;
 }
 
+.home-container .module-container.calendar-module {
+  display: flex;
+  height: 100%;
+  gap: 15px;
+  justify-content: space-between;
+  align-content: stretch;
+  flex-wrap: nowrap;
+}
+.home-container .module-container.calendar-module .module-header {
+  display: none;
+}
+.home-container .module-container.calendar-module .module-resize {
+  display: none;
+}
+.home-container .module-container.calendar-module .module-content {
+  width: 100%;
+  padding: 0;
+}
+
 .module-manager-modal .module-list {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -2444,6 +2463,8 @@
   min-width: 280px;
 }
 .calendar-module .calendar-section .calendar-container {
+  width: 50%;
+  height: 100%;
   background: var(--background-primary);
   border: 1px solid var(--background-modifier-border);
   border-radius: 8px;
@@ -2557,20 +2578,24 @@
 }
 .calendar-module .notes-section {
   flex: 1;
+  height: 100%;
   min-width: 200px;
   border: 1px solid var(--background-modifier-border);
   border-radius: 8px;
   padding: 16px;
+  overflow: hidden;
 }
 .calendar-module .notes-section .date-title {
   font-weight: 500;
   color: var(--text-normal);
   margin-bottom: 12px;
-  padding-bottom: 8px;
+  padding-bottom: 3px;
   border-bottom: 1px solid var(--background-modifier-border);
 }
 .calendar-module .notes-section .notes-list {
   display: flex;
+  height: 100%;
+  overflow: auto;
   flex-direction: column;
   gap: 8px;
 }
